<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maliput_ros</name>
  <version>0.1.0</version>
  <description>ROS2 integration package which offers the maliput API through the ROS2 service interface.</description>
  <maintainer email="ag.albachicar@ekumenlabs.com">Agustin Alba Chicar</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <doc_depend>ament_cmake_doxygen</doc_depend>

  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
